--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
 
     <div class="shop" id="shop"></div>
 
+    <div class="modal">
+        <div class="content">
+            <div class="close-btn">
+                <i class="bi bi-x"></i>
+            </div>
+            <h3>Because we appreciate you</h3>
+            <h1>Here's 15% off</h1>
+            <h3>Your order</h3>
+            <form class="form">
+                <input class="input" type="email" placeholder="enter your email address">
+            </form>
+        </div>
+    </div>
+
     <script src="index.js"></script>
 </body>
 </html>
