add local storage

--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
     </div>
 
     <script src="index.js" type="module"></script>
+    <script src="cart.js" type="module"></script>
 </body>
 </html>
